# shade

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  compile_commands.json  compile_flags.txt
cc/: BUILD.gn  core.cc  core.h  skottie.cc  skottie.h  svg.cc  svg.h
cc/old/: core.h  svg.cc  svg.h
docker/: Dockerfile  create_shade_skia_build_image.sh  run_shade_skia_build_container.sh
examples/: sandbox.rs  skottie_tool.rs  svg_tool.rs
old_examples/: skottie_tool.rs  svg_tool.rs
scripts/: build_skia.sh  generate_bindings.sh
src/: core.rs  core_bindings.rs  lib.rs  skottie.rs  skottie_bindings.rs  svg.rs  svg_bindings.rs
src/old/: skottie.rs  svg.rs
